[gd_scene load_steps=26 format=3 uid="uid://v0jjsyan6tqb"]

[ext_resource type="Script" path="res://level/level.gd" id="1_ephvr"]
[ext_resource type="Texture2D" uid="uid://dhi520mx0c40l" path="res://UI_B.webp" id="2_67rtb"]
[ext_resource type="Texture2D" uid="uid://c6dtja0joyvsl" path="res://Assets/UI_Icon/Pause_Button.png" id="3_wowah"]
[ext_resource type="Texture2D" uid="uid://bwqh6jusvuvnb" path="res://Assets/UI_Icon/Play_Button.png" id="4_orovw"]
[ext_resource type="Texture2D" uid="uid://c31y1yft7e4v6" path="res://Assets/UI_Icon/Time_Speedx2_Button.png" id="5_iflf5"]
[ext_resource type="Texture2D" uid="uid://x65kpbcshwrm" path="res://Assets/UI_Icon/Time_Speedx3_Button.png" id="6_8eitf"]
[ext_resource type="Texture2D" uid="uid://bqp5acd2aor36" path="res://Assets/UI_Icon/Up_Arrow_Button.png" id="7_l68h0"]
[ext_resource type="Script" path="res://level/camera_move.gd" id="8_opm41"]
[ext_resource type="PackedScene" uid="uid://yq85udbxdgui" path="res://Assets/3d_Mesh/Environment/Building001.glb" id="11_0ct7y"]
[ext_resource type="Script" path="res://level/defenses.gd" id="11_gtiyw"]
[ext_resource type="Script" path="res://level/path.gd" id="11_pt8qh"]
[ext_resource type="PackedScene" uid="uid://0xpk75ukefyj" path="res://Assets/3d_Mesh/Environment/Building.glb" id="12_2xk5y"]
[ext_resource type="PackedScene" uid="uid://crjgdwm4dv8ut" path="res://Assets/3d_Mesh/Environment/Gate1.glb" id="13_n683t"]
[ext_resource type="PackedScene" uid="uid://cl781lyxqbus6" path="res://testing/gate_2.tscn" id="14_64ehy"]
[ext_resource type="PackedScene" uid="uid://bnvxr840skrb8" path="res://Assets/3d_Mesh/Environment/Gate.glb" id="15_xio0c"]
[ext_resource type="PackedScene" uid="uid://c7w3caj4rq8cd" path="res://Assets/3d_Mesh/Environment/WallDef1.glb" id="16_t7wqk"]
[ext_resource type="PackedScene" uid="uid://c626auj3wr7vv" path="res://Assets/3d_Mesh/Environment/WallDef.glb" id="17_e1y1b"]
[ext_resource type="PackedScene" uid="uid://b2npxlf5giweo" path="res://testing/gate_3.tscn" id="18_0xke8"]

[sub_resource type="Curve3D" id="Curve3D_1r4fn"]
_data = {
"points": PackedVector3Array(-4.36801, 0, 0, 4.36801, 0, 0, -17.773, 1, 15, -5, 0, 0, 4, 0, 0, -4.693, 1, 15, -0.475645, 0, 3.68626, 0.476, 0, 3.686, 0, 1, 4.182, -4, 0, 0, 5, 0, 0, 4.693, 1, 15, -4.368, 0, 0, 0, 0, 0, 17.875, 1, 15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="BoxMesh" id="BoxMesh_j33iy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dhga7"]
albedo_color = Color(0.0117647, 0.235294, 0.00392157, 1)

[sub_resource type="Curve3D" id="Curve3D_du84n"]
_data = {
"points": PackedVector3Array(-3.47179, 0, -0.174083, 3.472, 0, 0, -18.17, 0, 12.4, -3.493, 0, 0, 3.493, 0, 0, -7.302, 0, 12.4, 0, 0, 4.722, 0, 0, 0, -2.5925, 5.34952e-05, 1.60352),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="Curve3D" id="Curve3D_i52y1"]
_data = {
"points": PackedVector3Array(-0.285517, 0, -9.23174, -3.472, 0, 0, 18.17, 0, 12.4, 3.493, 0, 0, -4.553, 0, 0, 7.302, 0, 12.4, 0.086, 0, 4.722, 0, 0, 0, 2.592, 0, 1.604),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_somrm"]
albedo_color = Color(0.294118, 0.294118, 0.294118, 1)
metallic = 0.51
metallic_specular = 0.78
roughness = 0.55

[sub_resource type="Curve3D" id="Curve3D_uvcyf"]
_data = {
"points": PackedVector3Array(0, 0, 0, 3.472, 0, 0, -18.17, 0, 12.4, -3.493, 0, 0, 3.493, 0, 0, -7.302, 0, 12.4, 0, 0, 4.722, 0, 0, 0, -2.592, 0, 1.604, 0, 0, 0, 0, 0, 4.722, 2.592, 0, 1.604, -4.568, 0, 0, 3.493, 0, 0, 7.302, 0, 12.4, -3.472, 0, 0, 0, 0, 0, 18.17, 0, 12.4),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="path_level" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.344551, 0)
script = ExtResource("1_ephvr")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(578.75, 324)
scale = Vector2(1.66595, 1.4026)
texture = ExtResource("2_67rtb")

[node name="top_right" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -332.0
offset_right = 1212.0
offset_bottom = 380.0
grow_horizontal = 0
scale = Vector2(0.215, 0.215)
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 4
alignment = 1

[node name="pause" type="TextureButton" parent="top_right"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("3_wowah")

[node name="view" type="TextureButton" parent="top_right"]
layout_mode = 2
texture_normal = ExtResource("4_orovw")

[node name="remove" type="TextureButton" parent="top_right"]
layout_mode = 2
texture_normal = ExtResource("5_iflf5")

[node name="TextureButton" type="TextureButton" parent="top_right"]
layout_mode = 2
texture_normal = ExtResource("6_8eitf")

[node name="wave" type="RichTextLabel" parent="."]
offset_left = 16.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = 60.0
theme_override_font_sizes/normal_font_size = 40
text = "WAVE"
visible_characters = 9
visible_ratio = 2.25

[node name="defense_menu_view" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -198.0
offset_right = 327.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.28, 0.28)
texture_normal = ExtResource("7_l68h0")

[node name="defense_picker" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 90)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -306.0
offset_top = -123.0
offset_right = 1601.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.32, 0.27)
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = -2
alignment = 1

[node name="top_view" type="Node3D" parent="."]

[node name="camera_path" type="Path3D" parent="."]
curve = SubResource("Curve3D_1r4fn")
script = ExtResource("8_opm41")

[node name="close_up_view" type="PathFollow3D" parent="camera_path"]
transform = Transform3D(-4.37111e-08, 0, -0.999993, 0, 0.999995, 0, 0.999993, 0, -4.37111e-08, -17.773, 1, 15)

[node name="camera" type="Node3D" parent="camera_path/close_up_view"]

[node name="Camera3D" type="Camera3D" parent="camera_path/close_up_view/camera"]
transform = Transform3D(-4.37114e-08, -0.355107, 0.934826, 0, 0.934826, 0.355107, -1, 1.55222e-08, -4.08625e-08, 0, 0, 0)

[node name="view_move" type="VBoxContainer" parent="camera_path"]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -87.0
offset_right = 134.0
offset_bottom = 87.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="right" type="Button" parent="camera_path/view_move"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = ">"

[node name="left" type="Button" parent="camera_path/view_move"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "<"

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.192282, 0.98134, 0, -0.98134, 0.192282, 0, 23.0791, 0.924223)
light_energy = 7.27
spot_range = 67.8702
spot_angle = 54.1535

[node name="ground" type="MeshInstance3D" parent="."]
transform = Transform3D(40, 0, 0, 0, 1, 0, 0, 0, 40, 0, -0.75, -1.696)
mesh = SubResource("BoxMesh_j33iy")
surface_material_override/0 = SubResource("StandardMaterial3D_dhga7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.906377, 0.416773, 0.0691446, -0.306559, 0.536215, 0.786444, 0.290692, -0.734012, 0.613779, 21.3892, 5.57267, 1.83407)
shadow_enabled = true

[node name="far_cam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.713654, 0.700498, 0, -0.700498, 0.713654, 0, 9.91145, 17.6238)

[node name="enemy_paths" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.344551, 0)

[node name="defenses" type="Node3D" parent="enemy_paths"]
script = ExtResource("11_gtiyw")

[node name="path_left" type="Path3D" parent="enemy_paths"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.344551, 0)
curve = SubResource("Curve3D_du84n")
script = ExtResource("11_pt8qh")

[node name="path_right" type="Path3D" parent="enemy_paths"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.344551, 0)
curve = SubResource("Curve3D_i52y1")
script = ExtResource("11_pt8qh")

[node name="right_path" type="CSGPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.351924, 0)
material_override = SubResource("StandardMaterial3D_somrm")
polygon = PackedVector2Array(-1, -0.25, -1, -0.2, 1, -0.2, 1, -0.25)
mode = 2
path_node = NodePath("../enemy_paths/path_right")
path_interval_type = 0
path_interval = 0.64
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="left_path" type="CSGPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.351924, 0)
material_override = SubResource("StandardMaterial3D_somrm")
polygon = PackedVector2Array(-1, -0.25, -1, -0.2, 1, -0.2, 1, -0.25)
mode = 2
path_node = NodePath("../enemy_paths/path_left")
path_interval_type = 0
path_interval = 0.64
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="camera" type="Node3D" parent="."]

[node name="camera_path" type="Path3D" parent="camera"]
curve = SubResource("Curve3D_uvcyf")

[node name="camera_follow" type="PathFollow3D" parent="camera/camera_path"]
transform = Transform3D(-4.37107e-08, 0, -0.999985, 0, 1, 0, 0.999985, 0, -4.37107e-08, -18.17, 0, 12.4)

[node name="target" type="Node3D" parent="camera/camera_path/camera_follow"]

[node name="door" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.250757, 23.5787)

[node name="Building001" parent="door" instance=ExtResource("11_0ct7y")]

[node name="Building2" parent="door" instance=ExtResource("12_2xk5y")]

[node name="Gate1" parent="door" instance=ExtResource("13_n683t")]

[node name="Gate2" parent="door" instance=ExtResource("14_64ehy")]

[node name="Gate4" parent="door" instance=ExtResource("15_xio0c")]

[node name="WallDef1" parent="door" instance=ExtResource("16_t7wqk")]

[node name="WallDef" parent="door" instance=ExtResource("17_e1y1b")]

[node name="Gate3" parent="door" instance=ExtResource("18_0xke8")]

[node name="door2" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.250757, 23.5787)

[node name="Building001" parent="door2" instance=ExtResource("11_0ct7y")]

[node name="Building2" parent="door2" instance=ExtResource("12_2xk5y")]

[node name="Gate1" parent="door2" instance=ExtResource("13_n683t")]

[node name="Gate2" parent="door2" instance=ExtResource("14_64ehy")]

[node name="Gate4" parent="door2" instance=ExtResource("15_xio0c")]

[node name="WallDef1" parent="door2" instance=ExtResource("16_t7wqk")]

[node name="WallDef" parent="door2" instance=ExtResource("17_e1y1b")]

[node name="Gate3" parent="door2" instance=ExtResource("18_0xke8")]

[connection signal="pressed" from="top_right/pause" to="." method="pause_button"]
[connection signal="pressed" from="top_right/view" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="top_right/remove" to="." method="remove_button"]
[connection signal="pressed" from="defense_menu_view" to="." method="_on_defense_menu_view_2_pressed"]
[connection signal="button_down" from="camera_path/view_move/right" to="." method="_on_left_button_down"]
[connection signal="button_up" from="camera_path/view_move/right" to="." method="_on_left_button_up"]
[connection signal="button_down" from="camera_path/view_move/left" to="." method="_on_right_button_down"]
[connection signal="button_up" from="camera_path/view_move/left" to="." method="_on_right_button_up"]
